Nav - fix navbar z-index going over overlays

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,7 +1,6 @@
 .is-toolbar {
 	position: sticky;
 	min-height: 64px;
-	z-index: 5000 !important;
 }
 .app-title {
 	z-index: 1;
